Bug 117299 - Firebird: Migration: table migration fails with VARCHAR_IGNORECASE column type before data import.
Summary: Firebird: Migration: table migration fails with VARCHAR_IGNORECASE column typ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks: Database-Firebird-Migration
  Show dependency treegraph
 
Reported: 2018-04-27 19:05 UTC by Drew Jensen
Modified: 2018-05-08 11:32 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
example odb file (4.51 KB, application/vnd.oasis.opendocument.database)
2018-04-27 19:06 UTC, Drew Jensen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Drew Jensen 2018-04-27 19:05:33 UTC
Description:
Test system:
Version: 6.1.0.0.alpha1
Build ID: cb47f0d320994e001bc38dc2ee9b7d957b15e6ab
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: en-US (en_US.UTF-8); Calc: group



Steps to Reproduce:
1. Download and open attached odb file 
2. click on Tables and answer yes for migration


Actual Results:  
Migration fails with error message:
firebird_sdbc error:
*Dynamic SQL Error
*SQL error code = -104
*Token unknown - line 1, column 133
*SUB_TYPE
caused by
'isc_dsql_prepare'

Expected Results:
table structure is migrated with VARCHAR column type for 'tst_data' column and appropriate sub_type for case insensitivity. 


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Ubuntu Chromium/65.0.3325.181 Chrome/65.0.3325.181 Safari/537.36
Comment 1 Drew Jensen 2018-04-27 19:06:07 UTC
Created attachment 141725 [details]
example odb file

file with empty table for test.
Comment 2 MM 2018-04-27 23:29:53 UTC
Confirmed on ubuntu 16.04 x64 with Version: 6.1.0.0.alpha1+
Build ID: e9ac3a9c1ee7689c4d591a68250666c95632bd2a
CPU threads: 2; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-04-27_00:59:01
Locale: en-US (en_US.UTF-8); Calc:

When trying to save the file, base shows the error again and on clicking 'yes' and 'ok', crashes: crashreport.libreoffice.org/stats/crash_details/14443477-9316-4726-bd4a-e72a59cc6002
Again, a different bug ?
Comment 3 Commit Notification 2018-05-07 09:04:45 UTC
Tamas Bunth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=210638cc162ce36c8afab3aa64a65afbb5955939

tdf#117299 dbahsql: add varchar_ignorecase type

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Drew Jensen 2018-05-08 11:32:25 UTC
Verified with: 
Version: 6.1.0.0.alpha1+
Build ID: ecf50fe71596c3edba8ce437481ab80ae1cd8935
CPU threads: 4; OS: Linux 4.15; UI render: GL; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2018-05-08_00:13:13
Locale: en-US (en_US.UTF-8); Calc: group

Table create, data transfer and checked for CI using GUI filter contorls, yup it is all working as expected for case insensitivity.