tdf#117299 dbahsql: add varchar_ignorecase type

Change-Id: I1dc904fe1b9146c978086861ef96f5141794bf09
Reviewed-on: https://gerrit.libreoffice.org/53901
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Tamás Bunth <btomi96@gmail.com>