dbaccess/source/filter/hsqldb/columndef.hxx
@@ -25,16 +25,19 @@ private:
     bool m_bPrimaryKey;
     sal_Int32 m_nAutoIncrement;
     bool m_bNullable;
+    bool m_bCaseInsensitive;
 
 public:
     ColumnDefinition(const OUString& sName, sal_Int32 eType, const std::vector<sal_Int32> aParams,
-                     bool bPrimary = false, sal_Int32 nAutoIncr = -1, bool bNullable = true);
+                     bool bPrimary = false, sal_Int32 nAutoIncr = -1, bool bNullable = true,
+                     bool bCaseInsensitive = false);
 
     OUString getName() const { return m_sName; }
     sal_Int32 getDataType() const { return m_eType; }
     bool isPrimaryKey() const { return m_bPrimaryKey; }
     bool isNullable() const { return m_bNullable; }
     bool isAutoIncremental() const { return m_nAutoIncrement >= 0; }
+    bool isCaseInsensitive() const { return m_bCaseInsensitive; }
     sal_Int32 getStartValue() const { return m_nAutoIncrement; }
     const std::vector<sal_Int32> getParams() const { return m_aParams; }
 };
